--- a/todo/lib/todo_web/live/page_live.html.heex
+++ b/todo/lib/todo_web/live/page_live.html.heex
@@ -20,19 +20,20 @@
         
         <ul class="todo-list">
             <%= for item <- @items do %>
-                <li data-id={item.id} class={completed?(item)}>
-                    <div class="view">
-                        <%= if checked?(item) do %>
-                        <input class="toggle" type="checkbox" phx-value-id={item.id} phx-click="toggle" checked />
-                        <% else %>
-                        <input class="toggle" type="checkbox" phx-value-id={item.id} phx-click="toggle" />
-                        <% end %>
-                        <label><%= item.text %></label>
-                        <button class="destroy" phx-click="delete" phx-value-id={item.id}></button>
-                    </div>
-                </li>
+                <%= if item.status != 2 do %>
+                    <li data-id={item.id} class={completed?(item)}>
+                        <div class="view">
+                            <%= if checked?(item) do %>
+                            <input class="toggle" type="checkbox" phx-value-id={item.id} phx-click="toggle" checked />
+                            <% else %>
+                            <input class="toggle" type="checkbox" phx-value-id={item.id} phx-click="toggle" />
+                            <% end %>
+                            <label><%= item.text %></label>
+                            <button class="destroy" phx-click="delete" phx-value-id={item.id}></button>
+                        </div>
+                    </li>
+                    <% end %>
                 <% end %>
-
         </ul>
     </section>
 
