--- a/todo/lib/todo_web/live/page_live.html.heex
+++ b/todo/lib/todo_web/live/page_live.html.heex
@@ -21,19 +21,33 @@
         <ul class="todo-list">
             <%= for item <- @items do %>
                 <%= if item.status != 2 do %>
-                    <li data-id={item.id} class={completed?(item)}>
-                        <div class="view">
-                            <%= if checked?(item) do %>
-                            <input class="toggle" type="checkbox" phx-value-id={item.id} phx-click="toggle" checked />
-                            <% else %>
-                            <input class="toggle" type="checkbox" phx-value-id={item.id} phx-click="toggle" />
-                            <% end %>
-                            <label><%= item.text %></label>
-                            <button class="destroy" phx-click="delete" phx-value-id={item.id}></button>
-                        </div>
-                    </li>
+                    <%= if item.id == @editing do %>
+                        <form phx-submit="update-item" id="form-update">
+                            <input
+                                id="update_todo"
+                                class="new-todo"
+                                type="text"
+                                name="text"
+                                required="required"
+                                value={item.text}
+                            />
+                            <input type="hidden" name="id" value={item.id}/>
+                        </form>
+                    <% else %>
+                        <li data-id={item.id} class={completed?(item)}>
+                            <div class="view">
+                                <%= if checked?(item) do %>
+                                <input class="toggle" type="checkbox" phx-value-id={item.id} phx-click="toggle" checked />
+                                <% else %>
+                                <input class="toggle" type="checkbox" phx-value-id={item.id} phx-click="toggle" />
+                                <% end %>
+                                <label phx-click="edit-item" phx-value-id={item.id}><%= item.text %></label>
+                                <button class="destroy" phx-click="delete" phx-value-id={item.id}></button>
+                            </div>
+                        </li>
                     <% end %>
                 <% end %>
+            <% end %>
         </ul>
     </section>
 
