--- a/todo/lib/todo_web/live/page_live.html.heex
+++ b/todo/lib/todo_web/live/page_live.html.heex
@@ -29,6 +29,7 @@
                                 type="text"
                                 name="text"
                                 required="required"
+                                phx-hook="FocusInputItem"
                                 value={item.text}
                             />
                             <input type="hidden" name="id" value={item.id}/>
