--- a/todo/lib/todo_web/live/page_live.html.heex
+++ b/todo/lib/todo_web/live/page_live.html.heex
@@ -55,9 +55,9 @@
     <footer class="footer" style="display: block;">
         <span class="todo-count"><strong>1</strong> item left</span>
         <ul class="filters">
-            <li><a href="#/" class="selected">All</a></li>
-            <li><a href="#/active">Active</a></li>
-            <li><a href="#/completed">Completed</a></li>
+            <li><.link patch={Routes.live_path(@socket, TodoWeb.PageLive, %{filter_by: "all"})}>All</.link></li>
+            <li><.link patch={Routes.live_path(@socket, TodoWeb.PageLive, %{filter_by: "active"})}>Active</.link></li>
+            <li><.link patch={Routes.live_path(@socket, TodoWeb.PageLive, %{filter_by: "completed"})}>Completed</.link></li>
         </ul>
         <button class="clear-completed" style="display: block;">
             Clear Completed
